# devops-study-app

.devcontainer/: Dockerfile
scripts/: setup
src/backend/: pyproject.toml
src/backend/src/data/: sessions.csv
src/frontend/: pyproject.toml
