[project]
name = "study-tracker-frontend"
version = "0.0.0"
description = "Frontend for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "Jonathan Klepsch", email = "JK@GMail.com" }]
requires-python = ">=3.13"
dependencies = ["flask>=3.1.2", "requests>=2.32.5"]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
